Fixed app contianer not stretching with content and adjust animation timing

--- a/src/components/App/app.module.scss
+++ b/src/components/App/app.module.scss
@@ -6,17 +6,21 @@
 }
 
 html,
-body,
-:global(#root) {
+body {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-.main {
-  height: 1px; // Hack for child container not conforming to min-height
+:global(#root) {
   min-height: 100%;
+}
+
+.main {
+  position: absolute;
+  min-height: 100%;
+  width: 100%;
   transition: background-color 0.15s ease-in-out;
 }
 
