--- a/src/components/LandingPage/components/ScrollArrow/scroll-arrow.module.scss
+++ b/src/components/LandingPage/components/ScrollArrow/scroll-arrow.module.scss
@@ -6,11 +6,11 @@
     transform: translateY(250%);
     opacity: 0;
   }
-  20% {
+  15% {
     transform: translateY(0);
     opacity: 1;
   }
-  40%,
+  30%,
   100% {
     transform: translateY(-250%);
     opacity: 0;
@@ -24,7 +24,7 @@
 
 .bar {
   width: 100%;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   background: colors.$light-secondary;
   animation: float 2s linear infinite;
 
